Fixes navigation positioning on mobile

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,5 +1,5 @@
 h1, h2, h3, h4, h5, body, p {
-    font-family: "Verdana"; !important
+    font-family: "Verdana";
 }
 
 figure.icon {
@@ -24,6 +24,7 @@ figure.icon {
     border: 1px solid #915eae;
     background: #aa96da;
     border-radius: 4px;
+}
 .header-style {
   color: #a796d6;
   background-color: #a796d6;
@@ -48,3 +49,33 @@ figure.icon {
   overflow-x: hidden;
   overflow-y: scroll;
 }
+
+@media (max-width: 959px) {
+  #navigation .nav {
+    position: fixed;
+    bottom: 0;
+  }
+  #navigation .nav.nav-next {
+    width: auto;
+    right: 1rem;
+  }
+
+  #navigation .nav i {
+    filter: drop-shadow(0 0 4px #251f296A);
+  }
+
+  #navigation .nav.nav-prev {
+    width: auto;
+    left: 1rem;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 959px) {
+  #navigation .nav.nav-next {
+    right: 0.375rem;
+  }
+  #navigation .nav.nav-prev {
+    left: 14.75rem;
+  }
+}
+
